@@ -38,7 +38,7 @@ public class ExcludePrivateAnnotationsJDiffDoclet {
   
   public static boolean start(RootDoc root) {
     System.out.println(
-	ExcludePrivateAnnotationsJDiffDoclet.class.getSimpleName());
+        ExcludePrivateAnnotationsJDiffDoclet.class.getSimpleName());
     return JDiff.start(RootDocProcessor.process(root));
   }
   
